# wqu-fd-gw

./: .gitignore  main.py  pyproject.toml
GW1/: India 1-Year Bond Yield Historical Data.csv  India 10-Year Bond Yield Historical Data.csv  India 15-Year Bond Yield Historical Data.csv  India 2-Year Bond Yield Historical Data.csv  India 3-Month Bond Yield Historical Data.csv  India 3-Year Bond Yield Historical Data.csv  India 30-Year Bond Yield Historical Data.csv  India 5-Year Bond Yield Historical Data.csv  India 6-Month Bond Yield Historical Data.csv  India 7-Year Bond Yield Historical Data.csv  MAIN.ipynb  taks3_gemini.py  task3.ipynb  yields.csv
GW2/: main.ipynb
