[project]
name = "wqu-fd-gw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fredapi>=0.5.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nelson-siegel-svensson>=0.5.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "seaborn>=0.13.2",
]
